# PlotJuggler

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  build.sh
.github/workflows/: openpilot.yaml  rlog.yaml
cmake/: FindCereal.cmake  FindRlog.cmake
plotjuggler_app/: plotwidget.cpp
plotjuggler_plugins/DataLoadRlog/: CMakeLists.txt  dataload_rlog.cpp  dataload_rlog.hpp  rlog_parser.cpp  rlog_parser.hpp
plotjuggler_plugins/DataStreamCereal/: CMakeLists.txt  datastream_cereal.cpp  datastream_cereal.h
plugins/DataLoadrlog/: .FileReader.cpp.swp  .FileReader_DR.cpp.swp  .FileReader_DR.hpp.swp  CMakeLists.txt  FileReader.cpp  FileReader.hpp  FileReader_DR.cpp  FileReader_DR.hpp  dataload_rlog.cpp  dataload_rlog.h  dataload_rlog.hpp  rlog_parser.cpp  rlog_parser.hpp
